<resources>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string-array name="user_types">
        <item>Patient</item>
        <item>Doctor</item>
    </string-array>
</resources>