<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="model"
            type="com.srijit.authy_sdk.ui.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#232323"
        android:fitsSystemWindows="true"
        tools:context=".activities.AuthFragment">

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@{model.isLoginFLow() ? @color/white : @color/gray,default = @color/white }"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/or"
                android:textColor="#acacac"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@{model.isLoginFLow() ? @color/gray : @color/white,default = @color/gray }"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.8">

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/spinner_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_black"
                android:gravity="center"
                android:hint="Select User Type"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="14sp"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_padding="8dp"
                app:spinner_divider_color="@color/white"
                app:spinner_divider_show="true"
                app:spinner_divider_size="0.4dp"
                app:spinner_item_height="25dp"
                app:spinner_popup_animation="dropdown"
                app:spinner_popup_background="@color/app_black"
                app:spinner_popup_elevation="14dp" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={model.emailId}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:counterTextColor="@color/gray"
                app:hintTextColor="@color/white">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={model.password}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/bt_perform_auth"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:text="@{model.isLoginFLow() ? @string/login : @string/signup}"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/app_blue"
                tools:text="@string/login" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@id/ll_other_options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_input">

            <View
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_other_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95">

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/iv_google"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:src="@drawable/ic_google" />

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:src="@drawable/ic_phone" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>